# loggity

./: README.md  pyproject.toml
examples/: contexts.py  example.py
loggity/: __init__.py  logger.py
