[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loggity"
version = "0.2.0-alpha.2"
authors = [
    {name = "slpuk", email = "yarik6052@gmail.com"},
]
description = "A simple, beautiful logger with a clean and intuitive interface"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = [
    "logging",
    "logger",
    "log",
    "terminal",
    "console",
    "pretty",
    "simple",
    "beautiful",
    "cli",
    "stdout",
    "debug",
    "info",
    "warn",
    "error",
    "success",
    "formatter",
    "output",
    "python-logging",
    "log-messages",
    "logging-library"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://github.com/slpuk/loggity"
Documentation = "https://github.com/slpuk/loggity#readme"
Repository = "https://github.com/slpuk/loggity"
"Issue Tracker" = "https://github.com/slpuk/loggity/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[tool.setuptools]
packages = ["loggity"]